--- a/apps/forkcraft-ui/src/app/globals.css
+++ b/apps/forkcraft-ui/src/app/globals.css
@@ -20,8 +20,8 @@ body {
   width: 100vw;
   height: 100vh;
   /* Disable scroll bouncing on edges */
-  overscroll-behavior: none;
-  -webkit-overflow-scrolling: touch;
+  /* overscroll-behavior: none;
+  -webkit-overflow-scrolling: touch; */
   min-width: 370px;
 }
 
